<resources>
  <string name="app_name">Transaction App</string>
  <string name="hint1">name</string>
  <string name="customer_name">Nama Customer</string>
  <string name="things_name">Nama Barang</string>
  <string name="things_num">Jumlah Barang</string>
  <string name="price">Harga (Rp)</string>
  <string name="money">Uang Bayar</string>
  <string name="process">Tambah</string>
  <string name="delete_data">Hapus Data</string>
  <string name="pay">Bayar</string>
  <string name="total_price">Total Harga (RP)</string>
  <string name="money_ret">Kembalian (RP)</string>
  <string name="bonus">Bonus</string>
  <string name="desc">Keterangan</string>
  <string name="get_data">Dapatkan Data</string>
</resources>
